--- a/.gitbook.yaml
+++ b/.gitbook.yaml
@@ -5,8 +5,8 @@ root: ./
 # Files to use as SUMMARY/README.
 # (Relative to <root> directory)
 structure:
-  readme: README.md
-  summary: SUMMARY.md
+  readme: ./Design-Patterns/src/main/java/structuredmodel/README.md
+  summary: ./SUMMARY.md
 
 # Redirect urls to specific files (relative to the <root> directory)
 redirects:
