--- a/pom.xml
+++ b/pom.xml
@@ -4,17 +4,14 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.study.zhengql</groupId>
-    <artifactId>zhengql-learn-demo</artifactId>
+    <groupId>com.study.lars</groupId>
+    <artifactId>larscheng-learn-demo</artifactId>
     <packaging>pom</packaging>
 
     <version>1.0-SNAPSHOT</version>
     <modules>
-        <module>mqttlog</module>
         <module>multithread</module>
         <module>practice</module>
-        <module>redisdelay</module>
-        <module>redismq</module>
         <module>Design-Patterns</module>
     </modules>
 
